--- a/QR-Code-Component/src/App.css
+++ b/QR-Code-Component/src/App.css
@@ -1,6 +1,51 @@
-#root {
-  max-width: 1280px;
+body {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: hsl(212, 45%, 89%);
   margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
+  height: 100%;
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 15px;
+}
+
+.QR_card {
+  background-color: white;
+  width: 350px;
+  height: 550px;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#QR_img {
+  display: flex;
+  height: 320px;
+  width: 320px;
+  margin-top: 20px;
+  border-radius: 20px;
+}
+
+#QR_paragraph_1 {
+  margin-top: 30px;
+  font-weight: 700;
   text-align: center;
+  font-size: 23px;
+  color: hsl(218, 44%, 22%);
+  width:80%;
+}
+
+#QR_paragraph_2 {
+  margin-top:0px;
+  font-weight: 400;
+  text-align: center;
+  font-size: 16px;
+  color: hsl(220, 15%, 55%);
+  width: 80%;
 }
